fix: limit the space for the card header to be able to truncate the content (#12227)

--- a/packages/tickets/src/components/TicketTimelineWidget/TicketTimelineWidget.less
+++ b/packages/tickets/src/components/TicketTimelineWidget/TicketTimelineWidget.less
@@ -52,6 +52,12 @@
         white-space: nowrap;
     }
 
+    .titleContainer {
+        flex: 1;
+        min-width: 0;
+        overflow: hidden;
+    }
+
     .iconWrapper {
         display: inline-flex;
         color: var(--content-neutral-secondary);
